[package]
name = "append-only-bytes"
version = "0.1.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/zxch3n/append-only-bytes"
description = "Shareable append-only bytes"
repository = "https://github.com/zxch3n/append-only-bytes"
authors = ["zxch3n <remch183@outlook.com>"]
keywords = ["bytes", "append-only"]
include = ["Cargo.toml", "**/*.rs"]
documentation = "https://docs.rs/append-only-bytes"
